[WARP-SPEED] Implement warpSourcePage
(cherry picked from commit 0536e9b866c597994b8cd7cf94032a70b7742cd9)