@@ -16,7 +16,6 @@ package io.trino.plugin.warp.storage.read;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
 import io.airlift.log.Logger;
-import io.trino.plugin.warp.config.GlobalConfig;
 import io.trino.plugin.warp.dictionary.DictionaryCacheService;
 import io.trino.plugin.warp.gen.constants.QueryResultType;
 import io.trino.plugin.warp.gen.stats.DictionaryStats;
@@ -36,15 +35,13 @@ import io.trino.plugin.warp.storage.read.fill.BlockFiller;
 import io.trino.plugin.warp.storage.read.fill.BlockFillersFactory;
 import io.trino.plugin.warp.util.StorageUtils;
 import io.trino.spi.block.Block;
-import io.trino.spi.block.LazyBlock;
-import io.trino.spi.catalog.CatalogName;
 
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static io.trino.plugin.warp.gen.constants.FileCookieParams.FILE_COOKIE_PARAMS_FD;
@@ -69,10 +66,6 @@ public class StorageCollectorService
     private final DictionaryCacheService dictionaryCacheService;
 
     private final ShapingLogger shapingLogger;
-    private final ShapingLoggerFactory shapingLoggerFactory;
-    private final LazyCollectTxService lazyCollectTxService;
-    private final GlobalConfig globalConfig;
-    private final CatalogName catalogName;
 
     @Inject
     StorageCollectorService(
@@ -83,10 +76,7 @@ public class StorageCollectorService
             StorageEngineConstants storageEngineConstants,
             BlockFillersFactory blockFillersFactory,
             DictionaryCacheService dictionaryCacheService,
-            ShapingLoggerFactory shapingLoggerFactory,
-            LazyCollectTxService lazyCollectTxService,
-            GlobalConfig globalConfig,
-            CatalogName catalogName)
+            ShapingLoggerFactory shapingLoggerFactory)
     {
         this.storageEngine = requireNonNull(storageEngine);
         this.collectTxService = requireNonNull(collectTxService);
@@ -96,10 +86,6 @@ public class StorageCollectorService
         this.blockFillersFactory = requireNonNull(blockFillersFactory);
         this.dictionaryCacheService = requireNonNull(dictionaryCacheService);
         this.shapingLogger = shapingLoggerFactory.getInstance(StorageCollectorService.class);
-        this.shapingLoggerFactory = requireNonNull(shapingLoggerFactory);
-        this.lazyCollectTxService = lazyCollectTxService;
-        this.globalConfig = globalConfig;
-        this.catalogName = catalogName;
     }
 
     private void loadDictionaries(QueryArgs queryArgs)
@@ -149,13 +135,14 @@ public class StorageCollectorService
             QueryArgs queryArgs,
             ThreadArena pageArena,
             AggregatorArgs aggregatorArgs,
-            WarpQueryState queryState)
+            WarpQueryState queryState,
+            List<Integer> blocksToLoad)
     {
-        queryState.resetNumRecordsInCurPage();
         return collectTxService.collectOpenAndRestore(recordIndexes,
                 queryArgs,
                 pageArena,
-                aggregatorArgs);
+                aggregatorArgs,
+                blocksToLoad);
     }
 
     void openChunk(int chunkIx,
@@ -182,23 +169,24 @@ public class StorageCollectorService
             QueryArgs queryArgs,
             AggregatorArgs aggregatorArgs,
             AggregatorPageArgs aggregatorPageArgs,
-            WarpQueryState queryState)
+            WarpQueryState queryState,
+            List<Integer> blocksToLoad)
     {
-        recordIndexes.setCurChunkProperties(chunk);
-        if (queryArgs.queryParams().getNumCollectElements() > 0) {
-            if (!aggregatorArgs.preLoadedCollectParamsList().isEmpty()) {
-                openChunk(chunk.chunkIndex(), queryArgs, aggregatorPageArgs);
-                try {
-                    collectChunk(aggregatorPageArgs,
-                            aggregatorPageArgs.queryResultTypes().get(),
-                            queryArgs.dispatcherPageSourceStats());
-                }
-                catch (Exception e) {
-                    shapingLogger.error(e, "Failed To collect chunk %s", chunk);
-                    throw e;
-                }
+        if (!blocksToLoad.isEmpty()) {
+            recordIndexes.setCurChunkProperties(chunk);
+            openChunk(chunk.chunkIndex(), queryArgs, aggregatorPageArgs);
+            try {
+                collectChunk(aggregatorPageArgs,
+                        aggregatorPageArgs.queryResultTypes().get(),
+                        queryArgs.dispatcherPageSourceStats());
+                queryArgs.dispatcherPageSourceStats().addcached_read_rows(chunk.numRecordsInChunk());
+            }
+            catch (Exception e) {
+                shapingLogger.error(e, "Failed To collect chunk %s", chunk);
+                throw e;
             }
         }
+
         logger.debug("collectFromStorage after native collect current chunk %s", chunk);
     }
 
@@ -207,48 +195,24 @@ public class StorageCollectorService
             AggregatorArgs aggregatorArgs,
             AggregatorPageArgs aggregatorPageArgs,
             WarpQueryState queryState,
-            List<ChunkProperties> pageChunksList)
+            List<ChunkProperties> pageChunksList,
+            List<Integer> blocksToLoad,
+            Block[] blocks)
     {
         List<WarmupElementCollectParams> collectElementsParamsList = queryArgs.queryParams().getCollectElementsParamsList();
         MemorySegment queryResultTypes = aggregatorPageArgs.queryResultTypes().orElse(MemorySegment.NULL);
         int rowsToFill = queryState.getNumRecordsInCurPage();
-        Block[] blocks = new Block[collectElementsParamsList.size()];
         int preLoadedBlockIx = 0;
 
-        for (int weIx = 0; weIx < collectElementsParamsList.size(); weIx++) {
+        for (Integer weIx : blocksToLoad) {
             WarmupElementCollectParams collectParams = collectElementsParamsList.get(weIx);
             BlockFiller<?> blockFiller = aggregatorArgs.blockFillers().get(weIx);
-            if (aggregatorArgs.preLoadedBlocks().get(weIx)) {
-                ReadJuffersWarmUpElement readJuffersWarmUpElement = aggregatorArgs.collectBuffersParams().collectJuffersWE().get(preLoadedBlockIx);
-                QueryResultType queryResultType = QueryResultType.values()[queryResultTypes.getAtIndex(ValueLayout.JAVA_INT, preLoadedBlockIx)];
-                Block block = blockFiller.fillBlockWithRecords(collectParams, readJuffersWarmUpElement, rowsToFill, queryResultType, dictionaryStats, queryArgs.dispatcherPageSourceStats());
-                blocks[collectParams.getBlockIndex()] = block;
-                preLoadedBlockIx++;
-            }
-            else {
-                QueryParams queryParams = queryArgs.queryParams();
-                LazyCollectorLoaderArgs lazyCollectorLoaderArgs = new LazyCollectorLoaderArgs(queryParams,
-                        queryArgs.fileCookie(),
-                        collectParams,
-                        new ReadJuffersWarmUpElement(bufferAllocator, true),
-                        blockFiller,
-                        pageChunksList,
-                        recordIndexes,
-                        queryState.getNumRecordsInCurPage(),
-                        queryArgs.numChunksInRange(),
-                        queryArgs.chunkSize(),
-                        catalogName);
-                blocks[collectParams.getBlockIndex()] = new LazyBlock(rowsToFill, new LazyCollectorLoader(
-                        lazyCollectTxService,
-                        lazyCollectorLoaderArgs,
-                        dictionaryStats,
-                        queryArgs.dispatcherPageSourceStats(),
-                        shapingLoggerFactory,
-                        queryArgs.nativeStats()));
-                queryArgs.dispatcherPageSourceStats().inclazy_collect_total_blocks();
-            }
+            ReadJuffersWarmUpElement readJuffersWarmUpElement = aggregatorArgs.collectBuffersParams().collectJuffersWE().get(preLoadedBlockIx);
+            QueryResultType queryResultType = QueryResultType.values()[queryResultTypes.getAtIndex(ValueLayout.JAVA_INT, preLoadedBlockIx)];
+            Block block = blockFiller.fillBlockWithRecords(collectParams, readJuffersWarmUpElement, rowsToFill, queryResultType, dictionaryStats, queryArgs.dispatcherPageSourceStats());
+            blocks[collectParams.getBlockIndex()] = block;
+            preLoadedBlockIx++;
         }
-        queryArgs.dispatcherPageSourceStats().addcached_read_rows(rowsToFill);
         return blocks;
     }
 
@@ -280,18 +244,13 @@ public class StorageCollectorService
                 storeMatchCollectMetadataBuff);
     }
 
-    public List<Boolean> getPreLoadedBlocks(QueryArgs queryArgs)
+    public List<Integer> getPreLoadedBlocks(QueryArgs queryArgs)
     {
-        if (!globalConfig.getEnableLazyForSelective()) {
-            // in full-scan we always load lazily
-            if (queryArgs.queryParams().getNumMatchElements() == 0) {
-                return Collections.nCopies(queryArgs.queryParams().getNumCollectElements(), false);
-            }
-            return Collections.nCopies(queryArgs.queryParams().getNumCollectElements(), true);
-        }
-        return queryArgs.queryParams().getCollectElementsParamsList().stream()
-                .map(WarmupElementCollectParams::hasMatchCollect)
-                .toList();
+        List<WarmupElementCollectParams> paramsList = queryArgs.queryParams().getCollectElementsParamsList();
+        return IntStream.range(0, paramsList.size())
+                .filter(i -> paramsList.get(i).hasMatchCollect())
+                .boxed()
+                .collect(Collectors.toList());
     }
 
     private AggregatorArgs getStorageCollectorArgs(QueryArgs queryArgs)
@@ -303,16 +262,10 @@ public class StorageCollectorService
             blockFillers.add(blockFillersFactory.getBlockFiller(collectParams.getBlockRecTypeCode().ordinal()));
         }
 
-        List<Boolean> preLoadedBlocks = getPreLoadedBlocks(queryArgs);
         CollectBuffersParams collectBuffersParams = collectTxService.getCollectBuffersAllocationParams(queryParams);
-        List<WarmupElementCollectParams> preLoadedCollectParamsList = IntStream.range(0, preLoadedBlocks.size())
-                .filter(preLoadedBlocks::get)
-                .mapToObj(queryParams.getCollectElementsParamsList()::get)
-                .toList();
+
         return new AggregatorArgs(blockFillers,
-                collectBuffersParams,
-                preLoadedBlocks,
-                preLoadedCollectParamsList);
+                collectBuffersParams);
     }
 
     private int getNumChunksInRange(QueryParams queryParams)
